--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mutec Students</title>
+    <title>Mutec Teacher</title>
     <link rel="icon" type="image/png" href="https://img5.pic.in.th/file/secure-sv1/Logo-IWF.png">
     
     <!-- Tailwind CSS CDN -->
